Revision of Server Next Step is running tests